# RechnerArchitektur

./: README.md
Dijekstra/: werteCorei5_q1.txt
Dijekstra/Orginal/: CMakeLists.txt  dijekstra.c
Dijekstra/cachePre/: CMakeLists.txt  cache.c
Dijekstra/parall/: CMakeLists.txt  parall.c
Matrix(Main)/: WerteCPUcor7App.txt  Werte_CPU1.txt  processor1Typ.txt  processor2inf.txt
Matrix(Main)/Double/: CMakeLists.txt  doubleMatrix.c
Matrix(Main)/Matrix_Parall/: CMakeLists.txt  Matrix_Parall.c
Matrix(Main)/Orginal/: CMakeLists.txt  Matrix.c
Matrix(Main)/chacheLP/: CMakeLists.txt  Matrix_cacheLP.c
Matrix(Main)/float/: CMakeLists.txt  floatMatrix.c
Matrix(Main)/matrixParllCount/: CMakeLists.txt  Matrix_ParallCount.c
Matrix(Main)/stackMatrix/: CMakeLists.txt  stackMatrix.c
SortierAlgorithmus/: .demo_preprocess.c.swp  CMakeLists.txt  Matrix.c  Matrix_Parall.c  Matrix_ParallCount.c  Matrix_cacheLP.c  bubble.c  doit.sh  insert.c  main.c  post_process.c  pre_process.c  sort.c
